--- a/styles/styles.css
+++ b/styles/styles.css
@@ -961,7 +961,7 @@ text-align: center;
   box-shadow: 0px 0.5px 0.5px 0px;
     width:350px;
     height:250px;
-  
+
   }
   .figure1:after{
    background-size: 350px 250px;
@@ -990,9 +990,13 @@ text-align: center;
     color: #000;
   }
   /* contact section */
+  .contact-section{
 
+    padding:50px;
+
+  }
     .contact-form{
-      max-width: 470px;
+      max-width: 500px;
     }
     .contact-form-btn{
       padding: 7px 25px;
